plugins {
  id 'java'
  id 'com.github.johnrengelman.shadow' version '2.0.4'
}
apply plugin: 'maven-publish'

ext{
  JDERVersion = 'V1.7-B1'
}

group 'com.github.EB-wilson'
version JDERVersion

sourceCompatibility = 17
targetCompatibility = 8

publishing {
  publications {
    maven(MavenPublication) {
      from components.java
    }
  }
}

assemble{
  dependsOn(shadowJar)
}

generateMetadataFileForMavenPublication{
  dependsOn(shadowJar)
}

allprojects{
  tasks.withType(JavaCompile){
    options.encoding = "UTF-8"

    options.fork = true
    options.forkOptions.jvmArgs.addAll([
        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
    ])
  }
}
